src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Rating_Score__c</fullName>
        <formula>IF(OR(Sum_of_Ratings__c=0,
      Count_of_Ratings__c=0
     ),
  0,
  Sum_of_Ratings__c /  Count_of_Ratings__c
)</formula>
        <label>Avg Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count_of_Ratings__c</fullName>
        <label>Count of Ratings</label>
        <summaryFilterItems>
            <field>Metrics_Data__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics_Data__c.Survey_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Effort_Score__c</fullName>
        <label>Customer Effort Score</label>
        <summarizedField>Metrics_Data__c.Customer_Effort_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics_Data__c.Customer_Effort_Score__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics_Data__c.Survey_Number__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lowest_Rating_Score__c</fullName>
        <label>Lowest Rating Score</label>
        <summarizedField>Metrics_Data__c.Rating__c</summarizedField>
        <summaryForeignKey>Metrics_Data__c.Survey_Number__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mid_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mid Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <summarizedField>Metrics_Data__c.Net_Promoter_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics_Data__c.Net_Promoter_Score__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics_Data__c.Survey_Number__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Promoter_Type__c</fullName>
        <formula>IF( Net_Promoter_Score__c &gt;=9, &quot;Promoter&quot;, 
IF( OR(Net_Promoter_Score__c = 7, Net_Promoter_Score__c = 8) , &quot;Passive&quot;, 
IF( AND(Net_Promoter_Score__c &lt;=6,Net_Promoter_Score__c &gt;=0), &quot;Detractor&quot;, 
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoter Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Thank_You_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Thank You Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sum_of_Ratings__c</fullName>
        <label>Sum of Ratings</label>
        <summarizedField>Metrics_Data__c.Rating__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics_Data__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics_Data__c.Survey_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Survey_Feedback_Grade_Icon__c</fullName>
        <formula>IF ( Survey_Feedback_Grade__c = &quot;Satisfied&quot;,  IMAGE(&quot;/resource/1419940789000/Happy_Face&quot;, &quot;Satisfied&quot;, 40, 40),
IF ( Survey_Feedback_Grade__c = &quot;Unsatisfied&quot;,  IMAGE(&quot;/resource/1419940825000/Sad_Face&quot;, &quot;Unsatisfied&quot;, 40, 40),
&quot;&quot;
))</formula>
        <label>Survey Feedback Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Feedback_Grade__c</fullName>
        <formula>IF( Lowest_Rating_Score__c &lt;= 6, &quot;Unsatisfied&quot;, 
IF( Lowest_Rating_Score__c &gt; 6, &quot;Satisfied&quot;, 
&quot;&quot;))</formula>
        <label>Survey Feedback Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Email__c</fullName>
        <label>Survey Taker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The contact person for the particular vacancy advert taking the survey.</inlineHelpText>
        <label>Survey Taker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Template</label>
        <referenceTo>Survey_Template__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey_Template__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>